# http-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.github/workflows/: cmake-single-platform.yml
cmake/: dependencies.cmake  options.cmake
examples/: CMakeLists.txt
examples/echo/: CMakeLists.txt  server.cpp
examples/echo_w_signals/: CMakeLists.txt  server.cpp
examples/file-server/: CMakeLists.txt  server.cpp
examples/file-server/resources/web/: index.html  styles.css
examples/multipart/: CMakeLists.txt  server.cpp
include/http-server/: enum.h  http-server.h  request.h  response-writer.h  response.h  route.h  static-routes.h
include/http-server/internal/: request-impl.h  route.h
src/: http-server.cpp  request-impl.h  request.cpp  response-writer.cpp  route.cpp  static-routes.cpp
test/: route-test.cpp
